# mobile-code-connect

./: .dockerignore  .gitignore  Cargo.toml  README.md  relay.der  skills-lock.json
.agents/skills/shadcn-vue/: README.md  SKILL.md
.github/workflows/: ci-cd.yml
apps/agentd/: Cargo.toml
apps/agentd/src/: main.rs
apps/control-server/: Cargo.toml
apps/control-server/src/: main.rs
apps/mobile-cli/: Cargo.toml
apps/mobile-cli/src/: main.rs
apps/punch-server/: Cargo.toml
apps/punch-server/src/: main.rs
apps/relayd/: Cargo.toml
apps/relayd/src/: main.rs
crates/agent/: Cargo.toml
crates/agent/src/: config.rs  lib.rs  mobile_grant.rs  p2p_client.rs  relay_client.rs  runtime.rs  service_registry.rs  stream_handler.rs
crates/agent/tests/: control_registration.rs  mobile_grant.rs  service_registry.rs  stream_handler.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs  token.rs
crates/auth/tests/: token_roundtrip.rs
crates/control/: Cargo.toml  build.rs
crates/control-client/: Cargo.toml
crates/control-client/src/: lib.rs
crates/control/src/: config.rs  lib.rs  oauth.rs  routes.rs  session.rs  sqlite_store.rs  state.rs  store.rs  token_issuer.rs
crates/control/tests/: control_client_flow.rs  control_plane.rs  session_flow.rs  sqlite_store.rs
crates/mobile-core/: Cargo.toml
crates/mobile-core/src/: browser_proxy.rs  client.rs  config.rs  events.rs  ffi.rs  forward.rs  lib.rs  path.rs  status.rs
crates/mobile-core/tests/: browser_proxy.rs  client_forwarder.rs  control_p2p_agent.rs  control_session.rs  local_forward_config.rs  local_forwarder.rs  mobile_platform_wrappers.rs  p2p_forward.rs  smoke_script.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: error.rs  frame.rs  ids.rs  lib.rs  mobile_grant.rs  model.rs
crates/protocol/tests/: frame_roundtrip.rs
crates/punch/: Cargo.toml
crates/punch/src/: candidate.rs  config.rs  lib.rs  probe.rs  server.rs
crates/punch/tests/: candidate_store.rs  p2p_path.rs  probe_ack.rs  udp_server.rs
crates/relay/: Cargo.toml
crates/relay/src/: admin.rs  bind.rs  config.rs  forward.rs  lib.rs  limiter.rs  runtime.rs  session.rs
crates/relay/tests/: admin.rs  e2e_agent_poll_control.rs  e2e_control_relay.rs  e2e_p2p_relay_fallback.rs  e2e_relay_tunnel.rs  forward.rs  limits.rs  runtime.rs  session_binding.rs
crates/sdk/: Cargo.toml
crates/sdk/examples/: sdk_live_workflow.rs  sdk_mock_workflow.rs
crates/sdk/src/: admin.rs  auth.rs  client.rs  controller.rs  facade.rs  lib.rs  mobile.rs  server.rs  server_auth.rs  store.rs
crates/sdk/tests/: admin_sdk.rs  auth_sdk.rs  controller_sdk.rs  examples_docs.rs  facade_sdk.rs  file_token_integration.rs  live_workflow.rs  mobile_tunnel_sdk.rs  server_auth_sdk.rs  server_sdk.rs  token_store.rs
crates/tunnel/: Cargo.toml
crates/tunnel/src/: copy.rs  lib.rs  quic.rs  stats.rs  stream.rs
crates/tunnel/tests/: copy_stats.rs  quic_endpoint.rs  quic_socket_reuse.rs  stream_header.rs
docker/: control-server.Dockerfile  relayd.Dockerfile
docs/: PRD.md  control-admin.html  mobile-device-acceptance.md  production-readiness.md  relay-admin.html  release.md  sdk-usage.md
docs/superpowers/plans/: 2026-05-24-rust-quic-tunnel-implementation.md  2026-06-05-admin-audit-log.md  2026-06-05-admin-list-pagination.md  2026-06-05-admin-session-controls.md  2026-06-05-admin-session-management.md  2026-06-05-admin-user-management-api.md  2026-06-05-admin-user-role-management.md  2026-06-05-control-admin-console.md  2026-06-05-control-plane-auth-hardening.md  2026-06-05-control-usage-summary.md  2026-06-05-persistent-admin-users.md  2026-06-05-plan-catalog-api.md  2026-06-05-relay-control-registration.md  2026-06-05-relay-credential-rotation.md  2026-06-05-relay-heartbeat-health.md  2026-06-05-relay-registration-token.md  2026-06-05-relay-usage-reporting.md  2026-06-05-session-state-auth-hardening.md  2026-06-05-usage-query-controls.md  2026-06-06-device-access-grants.md  2026-06-06-relay-traffic-quota-enforcement.md  2026-06-07-admin-console-device-access-ux.md  2026-06-07-admin-console-operation-feedback.md  2026-06-07-admin-console-relay-ux.md  2026-06-07-admin-console-user-plan-ux.md  2026-06-07-admin-dashboard-summary.md  2026-06-07-control-client-admin-query-methods.md  2026-06-07-dev-stack-admin-cli-helpers.md  2026-06-07-github-oauth-server-login.md  2026-06-07-mobile-cli-admin-list-queries.md  2026-06-07-mobile-cli-admin-mutations.md  2026-06-07-production-readiness-checks.md  2026-06-07-usage-period-reset.md  2026-06-09-mobile-browser-proxy.md  2026-06-09-mobile-uniffi-sdk-optimization.md  2026-06-09-mobile-uniffi-sdk.md  2026-06-10-agent-issued-mobile-grants.md  2026-06-10-control-server-frontend-hardening.md  2026-06-10-mobile-grant-hardening.md  2026-06-11-control-owned-relay-live-ops.md  (+7 more)
docs/superpowers/specs/: 2026-06-07-github-oauth-server-login-design.md  2026-06-09-mobile-browser-proxy-design.md  2026-06-09-mobile-uniffi-sdk-design.md  2026-06-10-agent-issued-mobile-grants-design.md  2026-06-10-mobile-grant-hardening-design.md  2026-06-11-relay-bootstrap-install-design.md  2026-06-11-relay-health-reporting-design.md  2026-06-15-linux-musl-cicd-design.md  2026-06-15-mobile-package-cicd-design.md  2026-06-20-server-auth-generated-device-login-design.md
mobile/android/: README.md  build.gradle.kts  consumer-rules.pro  gradle.properties  settings.gradle.kts
mobile/ios/: Package.swift  README.md
mobile/ios/Artifacts/: README.md
scripts/: dev-stack.sh  e2e-smoke.sh  gen-mobile-bindings.sh  install-relayd.sh  package-mobile-android.sh  package-mobile-ios.sh  production-check.sh
web/: README.md  components.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.vue  style.css
web/src/__tests__/: toast.test.ts  vite-proxy.test.ts
web/src/composables/: useAsyncData.ts  useAuth.ts  useBusyAction.ts  useI18n.ts  useTheme.ts
web/src/router/: guards.ts  index.ts
web/src/views/: LoginView.vue  OAuthGithubCallbackView.vue  ServerAuthBrowserApproveView.vue  ServerAuthDeviceApproveView.vue
(+140 files in other folders)
