[workspace]
resolver = "2"
members = [
  "crates/protocol",
  "crates/auth",
  "crates/tunnel",
  "crates/agent",
  "crates/mobile-core",
  "crates/relay",
  "crates/control",
  "crates/control-client",
  "crates/sdk",
  "crates/punch",
  "apps/agentd",
  "apps/mobile-cli",
  "apps/relayd",
  "apps/control-server",
  "apps/punch-server",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
hmac = "0.12"
quinn = "0.11"
rcgen = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
uniffi = "0.31.1"
