[package]
name = "agentd"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
quic_tunnel_agent = { path = "../../crates/agent" }
quic_tunnel_protocol = { path = "../../crates/protocol" }
quic_tunnel_sdk = { path = "../../crates/sdk" }
quic_tunnel_tunnel = { path = "../../crates/tunnel" }
rustls.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
