[package]
name = "agentd"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
mobilecode_connect_agent = { path = "../../crates/agent" }
mobilecode_connect_protocol = { path = "../../crates/protocol" }
mobilecode_connect_sdk = { path = "../../crates/sdk" }
mobilecode_connect_tunnel = { path = "../../crates/tunnel" }
rustls.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
