[package]
name = "mobile-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
quic_tunnel_auth = { path = "../../crates/auth" }
quic_tunnel_control_client = { path = "../../crates/control-client" }
quic_tunnel_mobile_core = { path = "../../crates/mobile-core" }
quic_tunnel_protocol = { path = "../../crates/protocol" }
quic_tunnel_sdk = { path = "../../crates/sdk" }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
