[package]
name = "mobile-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
mobilecode_connect_auth = { path = "../../crates/auth" }
mobilecode_connect_control_client = { path = "../../crates/control-client" }
mobilecode_connect_mobile_core = { path = "../../crates/mobile-core" }
mobilecode_connect_protocol = { path = "../../crates/protocol" }
mobilecode_connect_sdk = { path = "../../crates/sdk" }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
