[package]
name = "mobilecode_connect_agent"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
quinn.workspace = true
mobilecode_connect_control_client = { path = "../control-client" }
mobilecode_connect_punch = { path = "../punch" }
mobilecode_connect_tunnel = { path = "../tunnel" }
mobilecode_connect_protocol = { path = "../protocol" }
libc = "0.2"
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
mobilecode_connect_control = { path = "../control" }
