[package]
name = "quic_tunnel_auth"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
hmac.workspace = true
quic_tunnel_protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
