[package]
name = "quic_tunnel_control_client"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
quic_tunnel_auth = { path = "../auth" }
quic_tunnel_protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
