[package]
name = "mobilecode_connect_control_client"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
mobilecode_connect_auth = { path = "../auth" }
mobilecode_connect_protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
