[package]
name = "mobilecode_connect_control"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
mobilecode_connect_auth = { path = "../auth" }
mobilecode_connect_control_client = { path = "../control-client" }
mobilecode_connect_protocol = { path = "../protocol" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tower.workspace = true
