[package]
name = "quic_tunnel_mobile_core"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
async-trait.workspace = true
quinn.workspace = true
quic_tunnel_control_client = { path = "../control-client" }
quic_tunnel_punch = { path = "../punch" }
quic_tunnel_protocol = { path = "../protocol" }
quic_tunnel_tunnel = { path = "../tunnel" }
rustls.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uniffi.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
quic_tunnel_agent = { path = "../agent" }
quic_tunnel_auth = { path = "../auth" }
quic_tunnel_control = { path = "../control" }
