[package]
name = "mobilecode_connect_mobile_core"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
async-trait.workspace = true
quinn.workspace = true
mobilecode_connect_control_client = { path = "../control-client" }
mobilecode_connect_punch = { path = "../punch" }
mobilecode_connect_protocol = { path = "../protocol" }
mobilecode_connect_tunnel = { path = "../tunnel" }
rustls.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uniffi.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
mobilecode_connect_agent = { path = "../agent" }
mobilecode_connect_auth = { path = "../auth" }
mobilecode_connect_control = { path = "../control" }
