[package]
name = "mobilecode_connect_protocol"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
