[package]
name = "mobilecode_connect_punch"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
hmac.workspace = true
mobilecode_connect_protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
