[package]
name = "mobilecode_connect_relay"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
quinn.workspace = true
mobilecode_connect_auth = { path = "../auth" }
mobilecode_connect_protocol = { path = "../protocol" }
mobilecode_connect_tunnel = { path = "../tunnel" }
rustls.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
mobilecode_connect_agent = { path = "../agent" }
mobilecode_connect_control = { path = "../control" }
mobilecode_connect_control_client = { path = "../control-client" }
mobilecode_connect_mobile_core = { path = "../mobile-core" }
serde_json.workspace = true
tower.workspace = true
