[package]
name = "quic_tunnel_sdk"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
quic_tunnel_auth = { path = "../auth" }
quic_tunnel_control_client = { path = "../control-client" }
quic_tunnel_mobile_core = { path = "../mobile-core" }
quic_tunnel_protocol = { path = "../protocol" }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
quic_tunnel_control = { path = "../control" }
tower.workspace = true
