[package]
name = "mobilecode_connect_sdk"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
mobilecode_connect_auth = { path = "../auth" }
mobilecode_connect_control_client = { path = "../control-client" }
mobilecode_connect_mobile_core = { path = "../mobile-core" }
mobilecode_connect_protocol = { path = "../protocol" }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
mobilecode_connect_control = { path = "../control" }
tower.workspace = true
