[package]
name = "mobilecode_connect_tunnel"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
quinn.workspace = true
mobilecode_connect_protocol = { path = "../protocol" }
rcgen.workspace = true
rustls.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
